fixed the alignment and some few things

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ section.paymentBtn {
 footer {
   position: absolute;
   margin-top: 10px;
-  bottom: 3px;
+  bottom: 6px;
   left: 10px;
   align-items: center;
 }
